Fixed mobile formatting issue where it aligned left on writing/reviews

--- a/styles/site.css
+++ b/styles/site.css
@@ -121,7 +121,6 @@ h2 {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    max-width: 50vw;
 }
 
 .entry-label+.entry-label {
@@ -135,11 +134,11 @@ h2 {
 
 .title-label {
     color: black;
-    font-size: min(22px, 2vw)
+    font-size: min(22px, 3vw)
 }
 
 .subtitle-label,
 .date-label {
     color: var(--paragraph-color);
-    font-size: min(16px, 2vw)
+    font-size: min(16px, 3vw)
 }
